# wconfig

./: .gitignore  CHANGE_LOG.md  README.md  pyproject.toml
src/wconfig/: __init__.py  _decode.py  _parsers.py  _utils.py  config.py  errors.py
tests/: test_config.py
